# wk-proj

./: .env.example  README.md  pyproject.toml
configs/experiment/: exp07_cnn_final.yaml  exp08_cvt_final.yaml  exp09_recurrent_final.yaml  exp10_cnn_rotation.yaml  exp11_cvt_rotation.yaml  exp12_recurrent_rotation.yaml  exp13_recurrent_steps_1.yaml  exp14_recurrent_steps_2.yaml  exp15_recurrent_steps_8.yaml
data/splits/: compositional_50k.json  rotation_ood_50k.json
scripts/: run_final_experiment.sh
src/cli/: make_compositional_dataset.py  make_dataset.py  make_rotation_ood_dataset.py  train.py  tune.py
src/data/: __init__.py  dataset.py  generate.py  scene_json.py  schema.py  splits.py  transforms.py
src/engine/: checkpoint.py  train.py  validate.py
src/evaluation/: __init__.py  metrics.py
src/losses/: __init__.py  consistency.py  multitask.py  rotation.py  trajectory.py
src/models/: factory.py
src/models/cnn/: __init__.py  model.py
src/models/common/: __init__.py  embeddings.py  heads.py  mlp.py  norms.py
src/models/cvt/: __init__.py  attention.py  block.py  conv_tokenizer.py  model.py
src/models/recurrent_cvt/: __init__.py  cell.py  model.py  state.py  unroll.py
src/tracking/: artifacts.py  mlflow_utils.py  tags.py
src/tuning/: __init__.py  objective.py  optuna_runner.py  search_space.py
src/utils/: amp.py  config.py  device.py  logging.py  seed.py
