[project]
name = "wk-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"matplotlib>=3.8.0",
	"mlflow>=2.12.0",
	"numpy>=1.26.0",
	"optuna>=3.6.0",
	"pandas>=2.2.0",
	"pillow>=10.2.0",
	"psutil>=7.2.2",
	"pynvml>=13.0.1",
	"pyyaml>=6.0.1",
	"scikit-learn>=1.4.0",
	"torch>=2.2.0",
	"torchvision>=0.17.0",
	"umap-learn>=0.5.5",
]
